<resources>
    <string name="app_name">Ulricianum Planer</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Nutzername</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_incorrect_password">Der Nutzername oder das Passwort ist falsch.</string>
    <string name="error_field_required">Eingabe notwendig</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_settings">Einstellungen</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Allgemein</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Klasse</string>
    <string name="pref_default_display_name">1</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Aktualisierung</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">Automatische Synchronisation</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Benachrichtigungen</string>

    <string name="pref_title_new_message_notifications">VPL-Benachrichtigungen</string>

    <string name="pref_title_ringtone">Benachrichtigungston</string>
    <string name="pref_ringtone_silent">Leise</string>

    <string name="pref_title_vibrate">Vibrieren</string>
    <string name="title_activity_tutorial">Hilfe</string>
    <string name="large_text">
    </string>

    <string name="pref_title_room_notifications">Raum Benachrichtigungen</string>
    <string name="pref_description_room_notifications">Benachrichtigungen zum jeweils nächsten Raum</string>

    <string name="action_settings">Einstellungen</string>
    <string name="help_1">Damit die App automatisch Nachrichten zum Vertretungsplan senden kann muss der Stundenplan eingerichtet werden.
        \n\nZum hinzufügen oder Bearbeiten von Einträgen im Stundenplan einfach auf den jeweiligen Eintrag tippen und gedrückt halten. Es öffnet sich ein Dialog zum bearbeiten des Faches. Lehrer, Fach und Raum müssen groß geschrieben werden.
        \n\nDer Stundenplan aktualisiert sich automatisch und Benachrichtigungen werden ausgesandt. Außerdem verändert sich der Stundenplan bei Einträgen im Vertretungsplan entsprechend.
    </string>

    <string-array name="subjects">
        <item>BI</item>
        <item>CH</item>
        <item>DE</item>
        <item>DS</item>
        <item>EK</item>
        <item>EN</item>
        <item>FR</item>
        <item>GE</item>
        <item>IF</item>
        <item>KU</item>
        <item>LA</item>
        <item>MA</item>
        <item>MU</item>
        <item>PH</item>
        <item>PL</item>
        <item>PO</item>
        <item>RE</item>
        <item>SF</item>
        <item>SN</item>
        <item>SP</item>
        <item>ÖK</item>
    </string-array>
    <string-array name="subjects_long">
        <item>Biologie</item>
        <item>Chemie</item>
        <item>Deutsch</item>
        <item>Darstellendes Spiel</item>
        <item>Erdkunde</item>
        <item>Englisch</item>
        <item>Französisch</item>
        <item>Geschichte</item>
        <item>Informatik</item>
        <item>Kunst</item>
        <item>Latein</item>
        <item>Mathematik</item>
        <item>Musik</item>
        <item>Physik</item>
        <item>Philosophie</item>
        <item>Politik</item>
        <item>Religion</item>
        <item>Seminarfach</item>
        <item>Spanisch</item>
        <item>Sport</item>
        <item>Ökokurs</item>
    </string-array>

    <string name="dialog_title">Bearbeiten</string>
    <string name="dialog_positive">Ok</string>
    <string name="dialog_negative">Abbrechen</string>
    <string name="dialog_delete">Löschen</string>

    <string name="builder_title">Klasse Auswählen</string>

    <string name="synced">Synchronisiert!</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_description">Was ist das Problem?</string>
    <string name="feedback_attachtimetable">Stundenplan Anhängen</string>

    <string name="fetch_timetable_dialog_title">Stundenplan Aktualisierung</string>
    <string name="fetch_timetable_dialog_description">Es ist ein neuer Stundenplan verfügbar, soll dieser heruntergeladen werden?</string>
    <string name="pref_timetable_refresh_display_name">Stundenplan Abrufen</string>

    <string name="login_unsuccessful">Login fehlgeschlagen!</string>
    <string name="pref_developer">Entwickler</string>

    <string name="tutorial_title_01">Einrichten des Stundenplans</string>
    <string name="tutorial_description_01">Um deinen Stundenplan einzurichen drücke auf eines der Felder bis
ein Dialog erscheint.</string>

    <string name="tutorial_title_02">Lehrer einstellen</string>
    <string name="tutorial_description_02">Gib hier das Kürzel deines Lehrers ein.</string>

    <string name="tutorial_title_03">Fach einstellen</string>
    <string name="tutorial_description_03">Hier kannst du das Fach einstellen.</string>

    <string name="tutorial_title_04">Raum einstellen</string>
    <string name="tutorial_description_04">Den Raum kannst du hier eintragen.</string>

    <string name="tutorial_title_05">Aktualisierung</string>
    <string name="tutorial_description_05">Der Stundenplan aktualisiert sich nun automatisch, und zeigt dir eine Pushnachricht, wenn du
    Entfall, Raumänderung oder Änliches hast. Trage nun den Rest deiner Fächer ein und du bist fertig. </string>

    <string name="share_button">Share</string>
    <string name="no_internet_connection">Keine Netzwerkverbindung möglich</string>

    <string name="event_cancelled">Entfall</string>
    <string name="event_delayed">Verlegung</string>
    <string name="event_roomchange">Raumänderung</string>
    <string name="event_substitution">Vertretung</string>
    <string name="event_swap">Tausch</string>


</resources>
