<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <Preference
        android:capitalize="words"
        android:defaultValue="12"
        android:inputType="textCapWords"
        android:key="className"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name"
        android:summary="12"
        android:enabled="true"
        android:id="@+id/preference" />
    <Preference
        android:capitalize="words"
        android:defaultValue=""
        android:inputType="textCapWords"
        android:key="timetable_refresh"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_timetable_refresh_display_name"
        android:summary="" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_enabled"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_enabled"
        android:key="notifications_vibrate"
        android:title="@string/pref_title_vibrate" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_room_enabled"
        android:title="@string/pref_title_room_notifications"
        android:summary="@string/pref_description_room_notifications"
        android:enabled="true"/>

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="color_cancelled"
        android:title="@string/event_cancelled"
        android:summary=""
        android:defaultValue="#ef9a9a"  >
    </net.margaritov.preference.colorpicker.ColorPickerPreference>
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="color_delayed"
        android:title="@string/event_delayed"
        android:summary=""
        android:defaultValue="#B39DDB"  >
    </net.margaritov.preference.colorpicker.ColorPickerPreference>
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="color_roomchange"
        android:title="@string/event_roomchange"
        android:summary=""
        android:defaultValue="#80CBC4"  >
    </net.margaritov.preference.colorpicker.ColorPickerPreference>
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="color_substitution"
        android:title="@string/event_substitution"
        android:summary=""
        android:defaultValue="#FFE082"  >
    </net.margaritov.preference.colorpicker.ColorPickerPreference>
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="color_swap"
        android:title="@string/event_swap"
        android:summary=""
        android:defaultValue="#90CAF9"  >
    </net.margaritov.preference.colorpicker.ColorPickerPreference>


    <Preference
        android:capitalize="words"
        android:defaultValue=""
        android:inputType="textCapWords"
        android:key="developer"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_developer"
        android:summary="Bernd Schoolmann (Quexten)" />
</PreferenceScreen>
