<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_enabled"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_enabled"
        android:key="notifications_vibrate"
        android:title="@string/pref_title_vibrate" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_room_enabled"
        android:title="@string/pref_title_room_notifications"
        android:summary="@string/pref_description_room_notifications"
        android:enabled="false"/>

</PreferenceScreen>
